--- a/plumeti/public/stylesheets/home.css
+++ b/plumeti/public/stylesheets/home.css
@@ -1,5 +1,7 @@
 /* TODO ESTILO CLASE O ID DEBE INICIAR CON LA ETIQUETA.CLASE section.container, menos el banner n los metodos de pagos*/
-
+*{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 section.container{
     padding: 50px 0 50px 0;
 }
