--- a/plumeti/public/stylesheets/navbar.css
+++ b/plumeti/public/stylesheets/navbar.css
@@ -4,8 +4,8 @@
     padding: 0;
     margin: 0;
     box-sizing: content-box;
-    font-size: 16px;
-    font-family: open sans;
+
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 a{
     text-decoration: none;
@@ -48,8 +48,7 @@ nav .navContainer #buscador{
     cursor: pointer;
     color: #909090;
 }
-nav .navContainer #buscador:hover{
-}
+
 nav .navContainer #buscador:focus{
     border-bottom: 1px solid white;
 }
