Retoques al carrito

--- a/plumeti/views/cart.ejs
+++ b/plumeti/views/cart.ejs
@@ -41,24 +41,33 @@
 	<div class="tabla">
 	<table>
 			<tr>
-			<th>PRODUCTO</th>
+			<th></th>
+			<th style="text-align: center;">PRODUCTO</th>
 			<th>CANTIDAD</th>
 			<th>PRECIO</th>
 			<th>TOTAL</th>
 			<th>ELIMINAR</th>
 			</tr>
 			<tr>
-			<td>PAÑUELO BOQUITAS</td>
+			<td><img src="/images/Boquitas pintadas mostrado.heic" alt=""></td>
+			<td>Pañuelo Boquitas</td>
 			<td>1</td>
 			<td>$720</td>
 			<td>$720</td>
-			<td><a href="#" class="fas fa-trash-alt"></a> </td>
+			<td><a href="#" class="fas fa-trash-alt" id="icono" style="color: #9b736c;"></a> </td>
 			</tr> 
+			<td><img src="/images/Boquitas pintadas mostrado.heic" alt=""></td>
+			<td>Pañuelo Boquitas</td>
+			<td>1</td>
+			<td>$720</td>
+			<td>$720</td>
+			<td><a href="#" class="fas fa-trash-alt" id="icono" style="color: #9b736c;"></a> </td>
 			<tr>
 			<td></td>
 			<td></td>
 			<td></td>
-			<td>$720</td>
+			<td></td>
+			<td><strong>$1440</strong></td>
 			<td></td>
 			</tr> 
 		</table>
