--- a/plumeti/public/stylesheets/cart.css
+++ b/plumeti/public/stylesheets/cart.css
@@ -19,6 +19,10 @@ text-align: center;}
     
 }
 
+th{
+    background-color: #e9dfcf;
+}
+
 td, th {
 padding-top: 50px;
         padding: 20px;
@@ -34,7 +38,11 @@ th, td {
         text-align: center;
         color: grey;
      }
-
+td img{
+    width:25%;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #909090;
+}
 tr:hover {
 background-color: whitesmoke;
      }
@@ -43,3 +51,4 @@ background-color: whitesmoke;
         font-style: italic;
      }
 
+    
