--- a/plumeti/public/stylesheets/products.css
+++ b/plumeti/public/stylesheets/products.css
@@ -14,7 +14,7 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
         overflow: hidden;
         width: 20%;
         height: 100hv;
-        background-color: lightgray;
+        background-color:#f7f7f7;
     
 
     }
