Armado del view del detalle de producto

--- a/plumeti/public/stylesheets/cart.css
+++ b/plumeti/public/stylesheets/cart.css
@@ -44,7 +44,7 @@ td img{
     box-shadow: 0 0 10px #909090;
 }
 tr:hover {
-background-color: whitesmoke;
+background-color: #f7f7f7;
      }
      caption {
         font-weight: bold;
