--- a/plumeti/views/products.ejs
+++ b/plumeti/views/products.ejs
@@ -60,7 +60,7 @@
 <section id="right">
         <div class="productos">
             <div class="producto1">
-            <img src="/images/Boquitas pintadas mostrado.heic" alt="">
+            <a href="/detail"><img src="/images/Boquitas pintadas mostrado.heic" alt=""></a>
             <!--<div class="item-info-container">
                 <div class="title">
                 <a class="item-name" href="/url#producto" title="Pañuelo Bonsai" data-product-id="">Pañuelo Boquitas Pintadas</a>
