mejore el codigo html del home e inicie la pagina de perfil

--- a/plumeti/views/home.ejs
+++ b/plumeti/views/home.ejs
@@ -6,8 +6,8 @@
 
     <!-- Archivos CSS -->
     <link rel="stylesheet" href="/stylesheets/navbar.css">
-    <link rel="stylesheet" href="/stylesheets/home.css">
     <link rel="stylesheet" href="/stylesheets/footer.css">
+    <link rel="stylesheet" href="/stylesheets/home.css">
 
     <!-- Archivos javascript -->
     <script src="https://kit.fontawesome.com/eff8b9a252.js" crossorigin="anonymous"></script>
@@ -71,28 +71,49 @@
         </div>
     </header>
 
-    <section class="container">
-    <!-- Aca comienza lista de productos destacados -->
-        <div class="productosDestacados">
+    <section class="contenedor">
+        <div class="productosCarousel">
             <h2>Productos Destacados</h2>
 
-            <div class="listaProductosDestacados">
-                <img src="/images/slider1.jpg" alt="">
-                <img src="/images/slider2.jpg" alt="">
-                <img src="/images/slider3.jpg" alt="">
+            <div class="productos">
+                <div class="producto">
+                    <img src="/images/slider1.jpg" alt="">
+                </div>
+                <div class="producto">
+                    <img src="/images/slider2.jpg" alt="">
+                </div>
+                <div class="producto">
+                    <img src="/images/slider3.jpg" alt="">
+                </div>
+                <div class="producto">
+                    <img src="/images/slider1.jpg" alt="">
+                </div>
             </div>
-        </div>    
-    
-    <!-- Aca comienza lista de productos nuevos -->
-    <div class="productosNuevos">
-        <h2>Productos Nuevos</h2>
-
-        <div class="listaProductosNuevos">
-            <img src="/images/slider1.jpg" alt="">
-            <img src="/images/slider2.jpg" alt="">
-            <img src="/images/slider3.jpg" alt="">
         </div>
-    </div>    
+
+
+
+        <div class="productosCarousel">
+            <h2>Productos Nuevos</h2>
+
+            <div class="productos">
+                <div class="producto">
+                    <img src="/images/slider1.jpg" alt="">
+                </div>
+                <div class="producto">
+                    <img src="/images/slider2.jpg" alt="">
+                </div>
+                <div class="producto">
+                    <img src="/images/slider3.jpg" alt="">
+                </div>
+                <div class="producto">
+                    <img src="/images/slider1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+
+
     </section>
     
     <!-- Aca va un banner -->
