--- a/plumeti/public/stylesheets/home.css
+++ b/plumeti/public/stylesheets/home.css
@@ -2,26 +2,26 @@
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-section.container{
-    padding: 50px 0 50px 0;
-}
-section.container  h2{
-    text-align: center;
-    font-weight: bold;
-    font-size: 40px;
-}
-section.container .listaProductosDestacados , .listaProductosNuevos{
+section.contenedor{
     width: 100%;
-    height: 300px;
-    margin: 50px 0 50px 0;
+    padding: 50px 100px;
+}
+.productosCarousel h2{
+    font-size: 50px;
+    text-align: center;
+    margin:50px 0;
+}
+.productosCarousel .productos{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 30px 0;
 }
-section.container .listaProductosDestacados img , .listaProductosNuevos img{
-    width: 250px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px #909090;
+.productosCarousel .productos .producto{
+    width: 20%;
+}
+.productosCarousel .productos .producto img{
+    width: 100%;
 }
 #banner , #metodosDePago{
     width: 100%;
