--- a/plumeti/public/stylesheets/navbar.css
+++ b/plumeti/public/stylesheets/navbar.css
@@ -4,7 +4,9 @@
     padding: 0;
     margin: 0;
     box-sizing: content-box;
-
+    text-decoration: none;
+    list-style: none;
+    color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 a{
@@ -22,7 +24,7 @@ nav{
     width: 100%;
     height: 70px;
     background-color: white;
-    box-shadow: 0 0 10px #d1d1d1;
+    box-shadow: 0 0 10px #909090;
 }
 nav .navContainer{
     display: flex;
