Creada la pagina de perfil, historial de pedidos, cambio de contraseña y datos personales

--- a/plumeti/views/password.ejs
+++ b/plumeti/views/password.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/stylesheets/navbar.css">
-    <link rel="stylesheet" href="/stylesheets/profile.css">
+    <link rel="stylesheet" href="/stylesheets/profile-personal-data.css">
+    <link rel="stylesheet" href="/stylesheets/profile-password.css">
 
     <!-- scripts -->
     <script src="https://kit.fontawesome.com/eff8b9a252.js" crossorigin="anonymous"></script>
@@ -33,19 +34,31 @@
         </nav>
 
         <div class="container">
+            <div class="left"></div>
             <div id="left">
                 <div id="profile-image">
                     <p>Carga tu foto de perfil</p>
                 </div>
 
                 <ul>
-                    <li><a href="">Historial de compras</a></li>
-                    <li><a href="">Datos personales</a></li>
-                    <li><a href="">Contraseña</a></li>
+                    <li><a href="/profile/record">Historial de compras</a></li>
+                    <li><a href="/profile/personal-data">Datos personales</a></li>
+                    <li><a href="/profile/password">Contraseña</a></li>
                     <li><a href="">Cerrar sesion</a></li>
                 </ul>
             </div>
-            <div id="right"></div>
+
+            <div id="right">
+                <div id="password">
+                    <label for="actualPassword">Contraseña actual</label>
+                    <input type="text" id="actualPassword" placeholder="Ingresa tu contraseña">
+                    <label for="actualPassword">Contraseña nueva</label>
+                    <input type="text" id="actualPassword" placeholder="Ingresa una contraseña nueva">
+                    <label for="actualPassword">Confirma tu contraseña</label>
+                    <input type="text" id="actualPassword" placeholder="Confirma tu contraseña">
+                </div>
+                <button>Guardar cambios</button>
+             </div>
         </div>
     
 </body>
