maqueteado formulario de carga de producto

--- a/plumeti/views/login.ejs
+++ b/plumeti/views/login.ejs
@@ -47,6 +47,7 @@
 <P><input type="text" placeholder="Usuario" name="Usuario"></P>
 
 <p><input type="password" placeholder="Contraseña" name="Contraseña"></p>
+<p><button>Ingresar</button></p>
 <p><a href="">¿No recuerdas tu Contraseña?</a></p>
 <p><a href="">Crear nueva cuenta</a></p>
 
