--- a/plumeti/public/stylesheets/home.css
+++ b/plumeti/public/stylesheets/home.css
@@ -1,44 +1,42 @@
-/* TODO ESTILO CLASE O ID DEBE INICIAR CON LA ETIQUETA.CLASE section.container, menos el banner n los metodos de pagos*/
+@import url('https://fonts.googleapis.com/css?family=Baloo+Paaji+2&display=swap');
+
 *{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Baloo Paaji 2';
+    letter-spacing: 3px;
+    color:#404040;
 }
-section.contenedor{
-    width: 100%;
-    padding: 50px 100px;
+a:hover{
+    text-decoration: none;
 }
-.productosCarousel h2{
-    font-size: 50px;
-    text-align: center;
-    margin:50px 0;
+.navbar-toggler{ border:none; }
+.form-control{ border: none; }
+.relleno{
+    height: 69px;
+    background-color: red;
 }
-.productosCarousel .productos{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px 0;
+#carousel{ position: relative; }
+#carousel .fa-chevron-right , .fa-chevron-left{
+
+    position: absolute;
+    top:38%;
+    color: white;
+    font-size: 2rem;
 }
-.productosCarousel .productos .producto{
-    width: 20%;
+#carousel .fa-chevron-right{
+    right:5%;
 }
-.productosCarousel .productos .producto img{
-    width: 100%;
+#carousel .fa-chevron-left{
+    left:5%;
 }
-#banner , #metodosDePago{
-    width: 100%;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+main h2 , section h4{
+    font-size: 3rem;
 }
-#banner{
-    background-image: url('/images/slider1.jpeg');
+section article.banner{
+    background-image: url('/images/slider2.jpg');
+    background-size: cover;
 }
-#banner h3 , #metodosDePago h3{
-    font-size: 60px;
-    font-weight: bold;
-    text-align: center;
-    line-height: 80px;
-}
-#banner h3{
-    color:white;
-}
+footer{ background-color: #E9DFCF; }
