--- a/plumeti/views/home.ejs
+++ b/plumeti/views/home.ejs
@@ -1,172 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Archivos CSS -->
-    <link rel="stylesheet" href="/stylesheets/navbar.css">
-    <link rel="stylesheet" href="/stylesheets/footer.css">
-    <link rel="stylesheet" href="/stylesheets/home.css">
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- Archivos javascript -->
+    <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/eff8b9a252.js" crossorigin="anonymous"></script>
 
-    <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!--CSS-->
+    <link rel="stylesheet" href="/stylesheets/home.css">
+
+    <!--Javascript-->
+    <script src="/javascripts/parallax.js"></script>
     <title>Home</title>
 </head>
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top w-100 m-0 shadow">
+        <div class="container">
+            <div class="navbar-brand">
+                <img src="/images/logo.svg" height="40px" alt="">
+            </div>
+
+            <i class="fas fa-bars navbar-toggler" data-target="#menu" data-toggle="collapse" type="button"></i>
+                
+            <div class="collapse navbar-collapse" id="menu">
+
+                <input class="form-control " type="text" placeholder="Search" aria-label="Search">
 
 
-    <!-- Hoja de estilo para el nav navbar.css -->
-    <div class="relleno"></div>
-    <nav>
-        <div class="navContainer">
-            <a href="/home">
-                <img id="logo" src="/images/logo.svg" alt="">
-            </a>
-            <input id="buscador" type="search" value="" placeholder="Buscar">
-
-            <ul>
-                <li><a href="/home">Inicio</a></li>
-                <li><a href="/profile">Perfil</a></li>
-                <li><a href="/products">Productos</a></li>
-            </ul>
-            <a href="/cart"><i class="fas fa-shopping-cart"></i></a>
+                <ul class="navbar-nav ml-auto">
+                    <li class="navbar-item mx-1">
+                        <a href="/home" class="nav-link">Inicio</a>
+                    </li>
+                    <li class="navbar-item mx-1">
+                        <a href="/profile" class="nav-link">Perfil</a>
+                    </li>
+                    <li class="navbar-item mx-1">
+                        <a href="/products" class="nav-link">Productos</a>
+                    </li>
+                    <li class="navbar-item mx-1">
+                        <a href="/cart" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
+                    </li>
+                </ul>                
+            </div>
         </div>
     </nav>
-    <!-- Hasta aca llega el menu de navegacion -->
-    <header>
-        <!-- Aca comienza el header/carousel-->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-            <img class="d-block w-100" src="/images/slider1.jpeg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-            <img class="d-block w-100" src="/images/slider2.jpeg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-            <img class="d-block w-100" src="/images/slider3.jpeg" alt="Third slide">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+
+    <div class="relleno"></div>
+
+    <div id="carousel">
+        <img class="w-100" src="/images/slider3.jpeg" alt="">
+        <a href="" class="nav-link">
+            <i class="fas fa-chevron-left p-5"></i>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+        <a href="" class="nav-link">
+            <i class="fas fa-chevron-right p-5"></i>
         </a>
-        </div>
-    </header>
+    </div>
 
-    <section class="contenedor">
-        <div class="productosCarousel">
-            <h2>Productos Destacados</h2>
+    <main>
+        <div class="container">
+            
+            <h2 class=" mt-5 pt-5">Productos Destacados</h2>
 
-            <div class="productos">
-                <div class="producto">
-                    <img src="/images/slider1.jpg" alt="">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                    <img class="w-100" src="/images/slider1.jpg" alt="">
+                    <h3 class="text-center my-3">Nombre del producto</h3>
+                    <p class="text-center">$300</span>
                 </div>
-                <div class="producto">
-                    <img src="/images/slider2.jpg" alt="">
+                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                    <img class="w-100" src="/images/slider1.jpg" alt="">
+                    <h3 class="text-center my-3">Nombre del producto</h3>
+                    <p class="text-center">$300</span>
                 </div>
-                <div class="producto">
-                    <img src="/images/slider3.jpg" alt="">
+                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                    <img class="w-100" src="/images/slider1.jpg" alt="">
+                    <h3 class="text-center my-3">Nombre del producto</h3>
+                    <p class="text-center">$300</span>
                 </div>
-                <div class="producto">
-                    <img src="/images/slider1.jpg" alt="">
+                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                    <img class="w-100" src="/images/slider1.jpg" alt="">
+                    <h3 class="text-center my-3">Nombre del producto</h3>
+                    <p class="text-center">$300</p>
+                </div>
+            </div>
+
+
+            <h2 class=" mt-5 pt-5">Productos Nuevos</h2>
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                    <img class="w-100" src="/images/slider1.jpg" alt="">
+                    <h3 class="text-center my-3">Nombre del producto</h3>
+                    <p class="text-center">$300</span>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                    <img class="w-100" src="/images/slider1.jpg" alt="">
+                    <h3 class="text-center my-3">Nombre del producto</h3>
+                    <p class="text-center">$300</span>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                    <img class="w-100" src="/images/slider1.jpg" alt="">
+                    <h3 class="text-center my-3">Nombre del producto</h3>
+                    <p class="text-center">$300</span>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 product mt-5">
+                    <img class="w-100" src="/images/slider1.jpg" alt="">
+                    <h3 class="text-center my-3">Nombre del producto</h3>
+                    <p class="text-center">$300</p>
                 </div>
             </div>
         </div>
+    </main>
 
+    <section>
+        <article class="banner py-5">
+            <h4 class="py-5 text-center my-5 text-white font-weight-bold">NUEVA TEMPORADA</h4>
+        </article>
 
-
-        <div class="productosCarousel">
-            <h2>Productos Nuevos</h2>
-
-            <div class="productos">
-                <div class="producto">
-                    <img src="/images/slider1.jpg" alt="">
-                </div>
-                <div class="producto">
-                    <img src="/images/slider2.jpg" alt="">
-                </div>
-                <div class="producto">
-                    <img src="/images/slider3.jpg" alt="">
-                </div>
-                <div class="producto">
-                    <img src="/images/slider1.jpg" alt="">
-                </div>
-            </div>
-        </div>
-
-
-
+        <article class="py-5 w-25 m-auto">
+            <img class="w-100" src="/images/pagos3.png" alt="">
+        </article>
     </section>
-    
-    <!-- Aca va un banner -->
-    <div id="banner">
-        <h3>30% OFF desde el 10 de marzo <br> hasta el 20 de abril</h3>
-    </div>
-    
-    <!-- Aca van los metodos de pago -->
-    <div id="metodosDePago">
-        <h3>Aca van los metodos de pagos disponibles</h3>
-    </div>
 
-    <!-- Hoja de estilo para el footer footer.css -->
-    <footer>
-        <h2 id="contact">Contactanos</h2>
+    <footer class="">
+        <div class="container">
+            
+            <div class="row d-flex justify-content-between">
 
-        <div class="footerSeparator">
-            <div id="left">
-                <form action="index.html" method="POST">
-                    <input type="text" id="nombre" placeholder="Nombre">
-                    <input type="tel" id="telefono" placeholder="Telefono">
-                    <input type="email" id="correo" placeholder="Correo">
-                    <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                    <input type="submit" id="enviar" value="Enviar">
-                </form>
-            </div>
+                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">© Plumeti 2020</span>
 
 
-            <div id="right">
-                <ul>
-                    <li><a href="https://www.instagram.com/plumetiTEXTIL/"><i class="fab fa-instagram"></i> 
-                        PlumetiTEXTIL
-                    </a></li>
-
-                    <li><a href="https://www.facebook.com/PlumetiDeco/"><i class="fab fa-facebook-square"></i> 
-                        PlumetiDeco
-                    </a></li>
-
-                    <li><a href="mailto:clariric@gmail.com"><i class="fas fa-envelope"></i> 
-                        clariric@gmail.com
-                    </a></li>
-                    
-                    <li><a href="https://api.whatsapp.com/send?phone=5491167467772&text=&source=&data="><i class="fab fa-whatsapp"></i> 
-                        +54 9 11 6746-7772
-                    </a></li>
-                </ul>
+                <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">
+                    <a href="">
+                        <i class="ml-3 fab fa-facebook-f"></i>
+                    </a>
+                    <a href="">
+                        <i class="ml-3 fab fa-instagram"></i>
+                    </a>
+                    <a href="">
+                        <i class="ml-3 fab fa-whatsapp"></i>
+                    </a>
+                    <a href="">
+                        <i class="ml-3 fas fa-envelope"></i>
+                    </a>
+                </span>
             </div>
         </div>
     </footer>
-    <!-- Hasta aca llega el footer-->
 
 
 
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
 </body>
 </html>
