--- a/plumeti/views/products.ejs
+++ b/plumeti/views/products.ejs
@@ -58,69 +58,38 @@
         <!-- Aca comienzan los productos-->
 </section>
 <section id="right">
-        <div class="productos">
-            <div class="producto1">
-            <a href="/detail"><img src="/images/Boquitas pintadas mostrado.heic" alt=""></a>
-            <!--<div class="item-info-container">
-                <div class="title">
-                <a class="item-name" href="/url#producto" title="Pañuelo Bonsai" data-product-id="">Pañuelo Boquitas Pintadas</a>
-                </div>
-                <div class="item-price"> <span class="price"> $720,00</span>
-                </div-->
-            </div>
+            <section class="product-container"><!-- Contenedor de todos los productos -->
+                <article class="producto"><!-- Contenedor de cada producto -->
+                    <img class="main-photo" src="/images/Boquitas pintadas mostrado.heic" alt="">
+                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
+                </article>
+                <article class="producto">
+                    <img class="main-photo" src="/images/Afra azul mostrado.HEIC" alt="">
+                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
+                </article>
+                <article class="producto">
+                    <img class="main-photo" src="/images/Alegria amarilla mostrado.heic" alt="">
+                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
+                </article>
+                <article class="producto">
+                    <img class="main-photo" src="/images/Cala azul mostrado.heic" alt="">
+                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
+                </article>
 
-            <div class="producto2">
-            <img src="/images/Afra azul mostrado.HEIC" alt="">
-            <!--<div class="item-info-container">
-                <div class="title">
-                <a class="item-name" href="url producto" title="Pañuelo Bonsai" data-product-id="">Pañuelo Bonsai</a>
-                </div>
-                <div class="item-price"> <span class="price"> $720,00 </span>
-            </div> -->
-            </div>
-        
-            <div class="producto3">
-            <img src="/images/Alegria amarilla mostrado.heic" alt="">
-            <!--<div class="item-info-container">
-                <div class="title">
-                <a class="item-name" href="url producto" title="Pañuelo Bonsai" data-product-id="">Pañuelo Bonsai</a>
-                </div>
-                <div class="item-price"> <span class="price"> $720,00 </span>
-            </div> -->
-            </div>    
-
-              <div class="producto4">
-                <img src="/images/Cala azul mostrado.heic" alt="">
-                <!--<div class="item-info-container">
-                    <div class="title">
-                    <a class="item-name" href="url producto" title="Pañuelo Bonsai" data-product-id="">Pañuelo Bonsai</a>
-                    </div>
-                    <div class="item-price"> <span class="price"> $720,00 </span>
-                </div> -->
-                </div>  
-                <div class="producto5">
-                    <img src="/images/Jardin estrellado naranja mostrado.heic" alt="">
-                    <!--<div class="item-info-container">
-                        <div class="title">
-                        <a class="item-name" href="url producto" title="Pañuelo Bonsai" data-product-id="">Pañuelo Bonsai</a>
-                        </div>
-                        <div class="item-price"> <span class="price"> $720,00 </span>
-                    </div> -->
-                    </div>  
-                    <div class="producto6">
-                        <img src="/images/Afra fucsia mostrado.heic" alt="">
-                        <!--<div class="item-info-container">
-                            <div class="title">
-                            <a class="item-name" href="url producto" title="Pañuelo Bonsai" data-product-id="">Pañuelo Bonsai</a>
-                            </div>
-                            <div class="item-price"> <span class="price"> $720,00 </span>
-                        </div> -->
-                        </div>  
+                <article class="producto">
+                    <img class="main-photo" src="/images/Jardin estrellado naranja mostrado.heic" alt="">
+                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
+                </article>
+                <article class="producto">
+                    <img class="main-photo" src="/images/Jardin estrellado naranja mostrado.heic" alt="">
+                    <a href="#"><h2 class="name">Boquitas pintadas</h2></a>
+                    </article>
+ 
              
         </div>    
 </section>
 </div>
-
+    </article>
 <footer>
         <h2 id="contact">Contactanos</h2>
 
