--- a/plumeti/public/stylesheets/products.css
+++ b/plumeti/public/stylesheets/products.css
@@ -6,26 +6,24 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
 
 #contenedorGeneral{
     width: 100%;
-    height: 100hv;
-    display: flex;
+    overflow: hidden;
 }
 
     #contenedorGeneral #left{
-        overflow: hidden;
-        width: 20%;
-        height: 100hv;
-        background-color:#f7f7f7;
-    
+    float:left;
+    width: 20%;
+    background-color:#f7f7f7;
+    height: 100vh;
 
     }
     #contenedorGeneral #left .navBar{
-        padding-top: 10%;
-        padding-left: 10%;
             width: 100%;
+            margin-top: 2vw;
             display: flex;
             justify-content: flex-start;
             align-items: flex-end;
             color: #909090;
+            padding-left: 20px;
         }
 
     #contenedorGeneral #left .navBar a{
@@ -39,7 +37,6 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
         font-weight: bold;
         color:#e9dfcf;
         text-decoration: underline;
-        
     }
 
 
@@ -53,23 +50,54 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
         padding-left: 10px;
     }
 
-    #contenedorGeneral #right{
-        margin-top: 2%;
-        height: 80%;
-        overflow: hidden;
-        width: 70%;
-        align-items:left;
-        }
+
+#contenedorGeneral #right{
+float:left;
+height: 100vh;
+width:75%;
 
 
-    #contenedorGeneral #right .productos img {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        float:left;
-        width: 30%;
-        border-radius: 10px;
-        box-shadow: 0 0 10px #909090;
-        margin-left: 20px;
-        margin-bottom: 20px;
-    }
+}
+
+#right .product-container {
+width: 100%;
+}
+
+#right .product-container .producto{
+width: 30%;
+float: left;
+align-items: center;
+margin-left:2%;
+
+}
+
+#right .product-container .producto .main-photo{
+width:100%;
+border-radius: 10px;
+box-shadow: 0 0 10px #909090;
+align-items: center;
+}
+
+#right .product-container .producto h2 {
+position: relative;
+bottom:40px;
+font-size: 20px;
+color:white;
+padding-left:10px;
+font-weight: bold;
+text-decoration: none;
+text-decoration-line: none;
+}
+
+#right .product-container .producto a{
+    text-decoration: none;
+text-decoration-line: none;
+}
+
+
+#right .product-container .producto h2:hover {
+    text-decoration-line: none;
+    color:black;
+    text-decoration: none;
+    font-style: italic;
+}
